<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Affichage">
        <ListPreference
            android:defaultValue="14"
            android:dialogTitle="@string/pref_font_size_text"
            android:entries="@array/pref_font_size_labels"
            android:entryValues="@array/pref_font_size_values"
            android:key="@string/pref_font_size_key"
            android:summary="@string/pref_font_size_title"
            android:title="@string/pref_font_size_title" />

        <SwitchPreference
            android:id="@+id/pref_theme"
            android:title="@string/pref_theme_title"
            android:summary="@string/pref_theme_text"
            android:key="@string/pref_theme_key"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="Son">
        <SwitchPreference
            android:id="@+id/pref_son"
            android:title="@string/pref_sound_title"
            android:summary="@string/pref_sound_text"
            android:key="@string/pref_sound_key"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="Notification">
        <SwitchPreference
            android:id="@+id/pref_all_notif"
            android:title="@string/pref_all_notification_title"
            android:summary="@string/pref_all_notification_text"
            android:key="@string/pref_all_notification_key"
            />
    </PreferenceCategory>
</PreferenceScreen>