<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/sky"
    tools:context=".ui.fragment.RegisterProfilFragment">

    <LinearLayout
        android:id="@+id/linearLogo"
        android:layout_width="match_parent"
        android:layout_height="217dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/splashScreenLogo"
            android:layout_width="203dp"
            android:layout_height="110dp"
            android:layout_marginLeft="80dp"
            android:src="@drawable/logo_trans" />

        <TextView
            android:id="@+id/splashScreenAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_subtitle"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="-47dp"
            android:fontFamily="casual"
            android:text="@string/app_name"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/et_name"
            android:text="@string/login"
            android:textSize="17sp"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="50dp"
            android:enabled="true"/>

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/et_name"
            android:layout_marginStart="90dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/register"
            android:textSize="17sp"
            android:enabled="false"/>
    </LinearLayout>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/your_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/et_custom"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="date de naissance"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/jour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="jour"
                android:inputType="date" />

            <EditText
                android:id="@+id/mois"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="mois"
                android:inputType="date" />


            <EditText
                android:id="@+id/annee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="annee"
                android:inputType="date" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/et_custom"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="sexe"
            android:textSize="17dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox_checkAll"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_above="@id/btn_register"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="homme" />

            <CheckBox
                android:id="@+id/checkBox_ccpp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_above="@id/btn_register"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="Femme" />
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/splash_bg">


    <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/register_profil"
            android:textColor="@android:color/white" />


    </LinearLayout>

</LinearLayout>