<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/sky"
    tools:context=".ui.activity.ChoixProfilActivity">

    <LinearLayout
        android:id="@+id/linearLogo"
        android:layout_width="match_parent"
        android:layout_height="217dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/splashScreenLogo"
            android:layout_width="203dp"
            android:layout_height="110dp"
            android:layout_marginLeft="80dp"
            android:src="@drawable/logo_trans" />

        <TextView
            android:id="@+id/splashScreenAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_subtitle"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="-47dp"
            android:fontFamily="casual"
            android:text="@string/app_name"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/et_name"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="50dp"
            android:enabled="true"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/login"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/et_name"
            android:layout_marginStart="90dp"
            android:layout_marginBottom="50dp"
            android:enabled="false"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/register"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="50dp"
            android:clickable="true"
            android:paddingTop="10000sp"
            android:text="@string/choose_profile"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:text="huhuh" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:orientation="horizontal">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="50dp"
            android:clickable="true"
            android:paddingTop="10000sp"
            android:text="@string/choose_profile"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:text="huhuh" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:orientation="horizontal">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="50dp"
            android:clickable="true"
            android:paddingTop="10000sp"
            android:text="@string/choose_profile"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:text="huhuh" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_bg"></LinearLayout>


</LinearLayout>